--- a/.github/workflows/update_charts.yml
+++ b/.github/workflows/update_charts.yml
@@ -19,7 +19,9 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install -r requirements.txt
+          python -m pip install --upgrade pip
+          # requirements.txt 앞에 폴더 경로를 꼭 붙여주세요!
+          pip install -r homepage/requirements.txt
 
       - name: Run trends engine
         run: python homepage/trends_engine.py
